a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Haitong_Yang/invalid2.min
#int plus string
var x : string;
x = "foo";
x = x + 3;
